--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -61,7 +61,7 @@
            <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
           </button>
           <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-           <li><a href="javascript:void(0)"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
+           <li><a href="{% url 'course:replicate_subject' subject.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
            <li><a href="{% url 'course:update_subject' subject.slug %}" <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
            <li><a href="{% url 'course:delete_subject' subject.slug %}" ><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
           </ul>
