Applying date limit [Issue: #259]

--- a/forum/templates/forum/forum_view.html
+++ b/forum/templates/forum/forum_view.html
@@ -59,45 +59,47 @@
                     <h4><b>{% trans 'Opened in' %}:</b> {{ forum.create_date }}</h4>
                 </div>
             </div>
-            <div class="form_post_block">
-                <hr />
-                <form id="form_post" method="post" action="{% url 'course:forum:create_post' %}" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% if field.field.widget.input_type == 'hidden' %}
-                            {% render_field field class='form-control' value=forum.id %}
-                        {% else %}
-                            <div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
-                                <div class="input-group">
-                                    {% render_field field class='form-control' placeholder="Post a message" %}
-                                    <span class="help-block">{{ field.help_text }}</span>
-                                    {% if field.errors %}
-                                        <div class="row">
-                                            <br />
-                                            <div class="alert alert-danger alert-dismissible" role="alert">
-                                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                                <ul>
-                                                    {% for error in field.errors %}
-                                                        <li>{{ error }}</li>
-                                                    {% endfor %}
-                                                </ul>
+            {% if not forum.is_closed %}
+                <div class="form_post_block">
+                    <hr />
+                    <form id="form_post" method="post" action="{% url 'course:forum:create_post' %}" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            {% if field.field.widget.input_type == 'hidden' %}
+                                {% render_field field class='form-control' value=forum.id %}
+                            {% else %}
+                                <div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
+                                    <div class="input-group">
+                                        {% render_field field class='form-control' placeholder="Post a message" %}
+                                        <span class="help-block">{{ field.help_text }}</span>
+                                        {% if field.errors %}
+                                            <div class="row">
+                                                <br />
+                                                <div class="alert alert-danger alert-dismissible" role="alert">
+                                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                    <ul>
+                                                        {% for error in field.errors %}
+                                                            <li>{{ error }}</li>
+                                                        {% endfor %}
+                                                    </ul>
+                                                </div>
                                             </div>
-                                        </div>
-                                    {% endif %}
-                                    <span class="input-group-btn">
-                                        <button type="submit" class="btn btn-fab btn-fab-mini">
-                                            <i class="material-icons">{% trans 'send' %}</i>
-                                        </button>
-                                    </span>
+                                        {% endif %}
+                                        <span class="input-group-btn">
+                                            <button type="submit" class="btn btn-fab btn-fab-mini">
+                                                <i class="material-icons">{% trans 'send' %}</i>
+                                            </button>
+                                        </span>
+                                    </div>
                                 </div>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                </form>
-                <hr />
-            </div>
+                            {% endif %}
+                        {% endfor %}
+                    </form>
+                    <hr />
+                </div>
+            {% endif %}
             <div id="posts_list">
                 {% list_posts request forum %}
             </div>
