--- a/forum/templates/post/post_list.html
+++ b/forum/templates/post/post_list.html
@@ -6,23 +6,25 @@
             <div id="post_{{ post.id }}" class="col-sm-12 col-xs-12">
                 <h3 class="user-name">
                     {{ post.user }}
-                    <div class="pull-right">
-                        <a href="javascript:answer('{{ post.id }}', '{% url 'course:forum:reply_post' %}');">
-                            <i class="material-icons">{% trans 'reply' %}</i>
-                        </a>
-                        {% if request.user|has_role:'system_admin' or request.user == post.user %}
-                            {% csrf_token %}
-                            <div class="btn-group icon-more-horiz">
-                                <a class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="material-icons">more_horiz</i>
-                                </a>
-                                <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
-                                    <li><a href="javascript:edit_post('{% url 'course:forum:update_post' post.id %}', '{{ post.id }}', '{% trans 'Post edited successfully!' %}')"><i class="material-icons">create</i> {% trans 'Edit' %}</a></li>
-                                    <li><a href="javascript:javascript:delete_post('{% url 'course:forum:delete_post' post.id %}', '{{ post.id }}')"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
-                                </ul>
-                            </div>
-                        {% endif %}
-                    </div>
+                    {% if not post.forum.is_closed %}
+                        <div class="pull-right">
+                            <a href="javascript:answer('{{ post.id }}', '{% url 'course:forum:reply_post' %}');">
+                                <i class="material-icons">{% trans 'reply' %}</i>
+                            </a>
+                            {% if request.user|has_role:'system_admin' or request.user == post.user %}
+                                {% csrf_token %}
+                                <div class="btn-group icon-more-horiz">
+                                    <a class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="material-icons">more_horiz</i>
+                                    </a>
+                                    <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
+                                        <li><a href="javascript:edit_post('{% url 'course:forum:update_post' post.id %}', '{{ post.id }}', '{% trans 'Post edited successfully!' %}')"><i class="material-icons">create</i> {% trans 'Edit' %}</a></li>
+                                        <li><a href="javascript:javascript:delete_post('{% url 'course:forum:delete_post' post.id %}', '{{ post.id }}')"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
+                                    </ul>
+                                </div>
+                            {% endif %}
+                        </div>
+                    {% endif %}
                 </h3>
                 <div class="post_content">
                     <div class="card-data">
