--- a/forum/templates/post_answers/post_answer_list.html
+++ b/forum/templates/post_answers/post_answer_list.html
@@ -7,18 +7,20 @@
                 <div class="col-sm-12 col-xs-12">
                     <h3 class="user-name">
                         {{ answer.user }}
-                        {% if request.user|has_role:'system_admin' or request.user == answer.user %}
-                            <div class="pull-right">
-                                <div class="btn-group icon-more-horiz">
-                                    <a class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="material-icons">more_horiz</i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
-                                        <li><a href="javascript:edit_post_answer('{% url 'course:forum:update_post_answer' answer.id %}', '{{ answer.id }}', '{% trans 'Answer edited sucessfully!' %}')"><i class="material-icons">create</i> {% trans 'Edit' %}</a></li>
-                                        <li><a href="javascript:delete_answer('{% url 'course:forum:delete_answer' answer.id %}', '{{ answer.id }}', '{% trans "Are you sure you want to delete this answer?" %}')"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
-                                    </ul>
+                        {% if not answer.post.forum.is_closed %}
+                            {% if request.user|has_role:'system_admin' or request.user == answer.user %}
+                                <div class="pull-right">
+                                    <div class="btn-group icon-more-horiz">
+                                        <a class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <i class="material-icons">more_horiz</i>
+                                        </a>
+                                        <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
+                                            <li><a href="javascript:edit_post_answer('{% url 'course:forum:update_post_answer' answer.id %}', '{{ answer.id }}', '{% trans 'Answer edited sucessfully!' %}')"><i class="material-icons">create</i> {% trans 'Edit' %}</a></li>
+                                            <li><a href="javascript:delete_answer('{% url 'course:forum:delete_answer' answer.id %}', '{{ answer.id }}', '{% trans "Are you sure you want to delete this answer?" %}')"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
+                            {% endif %}
                         {% endif %}
                     </h3>
                     <div class="post_answer_content">
