added dates init and end #229

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -427,7 +427,7 @@ ul, li {
 .course-card-group{
   margin-bottom: 1%;
 }
-
+.data_register_course p{ color: grey; }
 .category-course-link{
   font-size: 24px;
   color: black !important;
