--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -74,7 +74,7 @@
 											<input type="text" class="form-control" placeholder="{% trans 'Search Files (.pdf, others) and/or activities' %}" name="search"></div>
 												<span class="input-group-btn input-group-sm">
 													<button type="submit" class="btn btn-fab btn-fab-mini">
-														<i class="glyphicon glyphicon-search" aria-hidden="true" style="color:#93C741"></i>
+														<i class="fa fa-search" aria-hidden="true" style="color:#93C741"></i>
 													</button>
 												</span>
 										</div>
